[UPDATE] docker-compose for frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,14 @@ services:
       - 5000:5000
     volumes:
       - ./backend:/app
+  nextjs-app:
+  	build:
+  	  context: ./frontend
+  	  dockerfile: Dockerfile
+  	ports:
+  	  - 3000:3000
+  	volumes:
+  	  - ./frontend/trading_app:/app  
+  		       
+      
+
